Removed circle backdrop and added a teal background. Fixed CSS overflow issue.

--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,3 @@
   margin:0;
   padding:0;
 }
-
-body {
-  background-color:#e4e4e4;
-}
-
-.stuff{
-  margin-bottom:2rem;
-}
