--- a/src/Components/Navigation/Navigation.module.css
+++ b/src/Components/Navigation/Navigation.module.css
@@ -4,6 +4,7 @@
     border-bottom:black 1px solid;
     box-shadow:1px 2px 3px rebeccapurple;
     width:100%;
+    position:absolute;
 }
 
 .NavList {
